force-app/main/default/objects/OriginalWargoal__c/OriginalWargoal__c.object-meta.xml
<CustomObject>
    <label>OriginalWargoal</label>
    <pluralLabel>OriginalWargoals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>OriginalWargoal Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>