force-app/main/default/objects/OriginalWargoal__c/fields/Casus_belli__c.field-meta.xml
<CustomField>
    <fullName>Casus_belli__c</fullName>
    <label>Casus belli</label>
    <type>Text</type>
    <length>255</length>
</CustomField>