force-app/main/default/objects/OriginalWargoal__c/fields/Change__c.field-meta.xml
<CustomField>
    <fullName>Change__c</fullName>
    <label>Change</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>