force-app/main/default/objects/OriginalWargoal__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <label>Score</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>